--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/*Main style*/
 *,
 *::before,
 *::after {
@@ -117,7 +118,7 @@ button[disabled] {
   resize: none;
   overflow: hidden;
 }
-
+/* button qualities*/
 @media (max-width: 690px) {
   .btn {
     font-size: 1rem;
